--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@mapbox/mapbox-gl-draw": "^1.4.3",
@@ -18,13 +20,16 @@
     "@tiptap/pm": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
+    "daisyui": "^4.12.13",
     "maplibre-gl": "^4.5.0",
     "next": "^14.2.4",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "terra-draw": "^1.0.0-beta.3",
     "tiptap-extension-upload-image": "^1.0.1"
   },
   "devDependencies": {
