--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "swr": "^2.2.5",
     "terra-draw": "^1.0.0-beta.3",
     "tiptap-extension-upload-image": "^1.0.1"
   },
